--- a/Crunchers/Views/Home/Index.cshtml
+++ b/Crunchers/Views/Home/Index.cshtml
@@ -1,30 +1,148 @@
 ﻿@model IEnumerable<Crunchers.Models.ProductModel>
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Crunchers shop";
 }
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p>
-        <a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a>
-    </p>
-</div>
+<style>
+      .clean-navbar.fixed-top + .page {
+        padding-top: 5rem;
+      }
+      
+      .clean-navbar.fixed-top + .page {
+        padding-top: 62px;
+      }
+            
+      .clean-block.dark {
+              background-color: #ffffff;
+            }
+      
+      .container {
+        max-width: 1140px;
+      } 
+      
+      .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 80px;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .text-info {
+        color: orange!important;
+      }
+      
+      .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: .5rem;
+        font-weight: 500;
+        line-height: 1.2;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        margin-bottom: .5rem;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-content {
+        padding: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+      
+      .clean-block .block-content, .clean-block .content {
+        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+        background-color: #fff;
+      }
+      
+      .clean-block.clean-faq .faq-item {
+        margin-bottom: 20px;
+      }
+      
+      .my-class {
+        color: orange !important;
+      }
+      
+      
+      ul.myli {
+              text-align: justify;
+      }
+      
+              ul.myli li  {
+                      display: inline-block;
+                      text-align: left;
+              }
+              ul.myli li.lihelper {
+                      width: 100%;
+                      height: 0;
+                      visibility: hidden;
+              }
+              
+              .clean-block {
+                        border-top: 2px solid orange!important;
+                        background-color: #fff;
+                        margin: auto;
+                        padding: 40px;
+                        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+                    }
+</style>
 
 <div class="row">
-    <div class="col-md-4">
-        <p>
-            <a class="btn btn-default" href="@Url.RouteUrl(new {controller = "Catalog", action = "Index"})">Catalog &raquo;</a>
-        </p>
-    </div>
-    <br/>
-    <br/>
-    @foreach (var product in Model)
-    {
-        <a href="/Catalog/Product?productId=@product.ProductId">
-            <img src="@product.ImageLink" alt="Изображение отсутствует " width="300" height="300"/>
-        </a>
-        <a href="/Catalog/Product?productId=@product.ProductId">@product.ProductName</a>
-        <br/>
-    }
-
+    <section style="padding: 20px" class="clean-block clean-blog-list dark">
+        <div class="text-info">
+            <p>
+                <a style="width: 100%" class="btn btn-default" href="@Url.RouteUrl(new {controller = "Catalog", action = "Index"})">Перейти в каталог</a>
+            </p>
+        </div>
+    </section>
+    <h3>
+        <section class="clean-block clean-blog-list dark">
+            <div>
+                <h3>
+                    <label class="text-info">Популярные товары:</label>
+                </h3>
+            </div>
+            <br/>
+            <ul class="myli">
+                @foreach (var product in Model)
+                {
+                    <li class="myli">
+                        <div>
+                            <a href="/Catalog/Product?productId=@product.ProductId">
+                                <img class="img-fluid d-block mx-auto" src="@product.ImageLink" alt="Изображение отсутствует" width="300" height="300"/>
+                            </a>
+                        </div>
+                        <div>
+                            <a class="my-class" href="/Catalog/Product?productId=@product.ProductId">@product.ProductName</a>
+                        </div>
+                        <div class="price">
+                            <h3>Стоимость: @product.ProductPrice</h3>
+                        </div>
+                    </li>
+                }
+                <li class="lihelper"></li>
+            </ul>
+        </section>
+    </h3>
 </div>
