--- a/Crunchers/Views/Admin/ManageCategories.cshtml
+++ b/Crunchers/Views/Admin/ManageCategories.cshtml
@@ -84,19 +84,9 @@ function DeleteCategory(categoryId) {
         padding-top: 62px;
       }
       
-      body {
-        margin: 0;
-        font-family: Montserrat,sans-serif;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.5;
-        color: #212529;
-        text-align: left;
-        background-color: #fff;
-      }
       
       .clean-block.dark {
-        background-color: #f6f6f6;
+        background-color: #ffffff;
       }
       
       .container {
