--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -42,6 +42,140 @@
             });
     }}
 </script>
+<style>
+      .clean-block.clean-form form {
+          border-top: 2px solid orange!important;
+          background-color: #fff;
+          max-width: 500px;
+          margin: auto;
+          padding: 40px;
+          box-shadow: 0 2px 10px rgba(0,0,0,.075);
+      }
+
+
+      input:focus {
+        outline: none;
+      }
+      
+      .fox {
+        font-size: 18px;
+        padding: 10px 10px 10px 5px;
+        display: block;
+        width: 300px;
+        border: none;
+        border-bottom: 1px solid orange !important;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+      
+      button, input {
+        overflow: visible;
+      }
+      
+      button, input, optgroup, select, textarea {
+        margin: 0;
+        font-family: inherit;
+        font-size: inherit;
+        line-height: inherit;
+      }
+    
+      
+
+      .clean-navbar.fixed-top + .page {
+        padding-top: 5rem;
+      }
+      
+      .clean-navbar.fixed-top + .page {
+        padding-top: 62px;
+      }
+      
+      .clean-block.dark {
+              background-color: #ffffff;
+      }
+      
+      .container {
+        max-width: 1140px;
+      } 
+      
+      .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 80px;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .text-info {
+        color: orange!important;
+        font-weight: normal !important;
+      }
+      
+      .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: .5rem;
+        font-weight: 500;
+        line-height: 1.2;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        margin-bottom: .5rem;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-content {
+        padding: 40px;
+      }
+      
+      .clean-block .block-content, .clean-block .content {
+        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+        background-color: #fff;
+      }
+      
+      .clean-block.clean-faq .faq-item {
+        margin-bottom: 20px;
+      }
+      
+      .my-class {
+        color: orange !important;
+      }  
+      
+      .form-group {
+            text-align: center;
+            border-top: 2px solid orange!important;
+                      background-color: #ffffff;
+                      max-width: 500px;
+                      margin: auto;
+                      padding: 40px;
+                      box-shadow: 0 2px 10px rgba(0,0,0,.075);
+                      
+        margin-left: auto;
+        margin-right: auto;
+            }  
+  
+</style>
+
 <h1>@Model.Products.FirstOrDefault().ProductName</h1>
 <form id="productInfo">
     @{
@@ -102,3 +236,56 @@
         <a onclick="ChangeProduct()">Изменить товар</a>
     }
 </form>
+@{
+    var productGroup = Model.Products.GroupBy(x => x.ProductId);
+    <section class="clean-block clean-blog-list dark">
+        <div class="container">
+            <div class="block-heading">
+                <h1 class="text-i">Управление категориями товаров</h1>
+            </div>
+            <div class="form-group">
+                <form>
+                    <h4>
+                        <p><label style="font-weight: inherit !important;" class="text-info" for id="productImageInput">Ссылка на изображение:</label>
+                            <input id="productImageInput" class="fox" maxlength="255" value="@ViewBag.imageLink"/>
+                        </p>
+                        <form method="get" action="/FileUpload/Index">
+                            <input type="hidden" name="categoryId" value="@ViewBag.categoryId" />
+                            <input type="submit" value="Загрузить изображение"/>
+                        </form>
+                    </h4>
+                    <h4>
+                        <p><label style="font-weight: inherit !important;" class="text-info" for id="productNameInput">Название товара:</label>
+                            <input id="productNameInput" class="fox" maxlength="100" required/>
+                        </p></h4>
+                    <h4>
+                        <p><label style="font-weight: inherit !important;" class="text-info" for id="productPriceInput">Цена:</label>
+                            <input id="productPriceInput" class="fox" type="number" min="0" max="99999999" required>
+                        </p></h4>
+                </form>
+                <form id="newCharacteristics">
+                    @foreach (var characteristic in Model.Characteristics)
+                    {
+                        <h4><label style="font-weight: inherit !important;" class="text-info">@characteristic.CharacteristicName:</label>
+                            @{if (characteristic.CharacteristicType == "Строковое значение")
+                              {
+                                  <input class="fox" id="Name=@characteristic.CharacteristicId" pattern="[^_]+" maxlength="100"/>
+                                  <h6>(без символа "_")</h6>
+                              }
+                              else
+                              {
+                                  <input id="Name=@characteristic.CharacteristicId" type="number" max="99999999" min="0" required/>
+                                  if (characteristic.Unit != null || characteristic.Unit != "")
+                                  {
+                                      <text>(в @(characteristic.Unit))(0 в случае отсутствия)</text>
+                                  }
+                              }
+                            }</h4>
+                        <br/>
+                    }
+                </form>
+                <h4><a class="my-class" onclick=" AddProduct()">Добавить продукт</a></h4>
+            </div>
+        </div>
+    </section>
+}
