--- a/Crunchers/Views/Catalog/Index.cshtml
+++ b/Crunchers/Views/Catalog/Index.cshtml
@@ -1,15 +1,124 @@
 ﻿@using Microsoft.AspNet.Identity
 @model IEnumerable<Crunchers.Models.CategoryModel>
-<h2>
-    <label style="font-weight: inherit !important;" class="text-info">
-        Категории:
-    </label>
-</h2>
-@foreach (var category in Model)
-{
+<style>
+      .clean-navbar.fixed-top + .page {
+        padding-top: 5rem;
+      }
+      
+      .clean-navbar.fixed-top + .page {
+        padding-top: 62px;
+      }
+            
+      .clean-block.dark {
+              background-color: #ffffff;
+            }
+      
+      .container {
+        max-width: 1140px;
+      } 
+      
+      .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 80px;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .text-info {
+        color: gray!important;
+      }
+      
+      .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: .5rem;
+        font-weight: 500;
+        line-height: 1.2;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        margin-bottom: .5rem;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-content {
+        padding: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+      }
+      
+      .clean-block .block-content, .clean-block .content {
+        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+        background-color: #fff;
+      }
+      
+      .clean-block.clean-faq .faq-item {
+        margin-bottom: 20px;
+      }
+      
+      .my-class {
+        color: orange !important;
+      }
+      
+      
+      ul.myli {
+              text-align: justify;
+      }
+      
+              ul.myli li  {
+                      display: inline-block;
+                      text-align: left;
+              }
+              ul.myli li.lihelper {
+                      width: 100%;
+                      height: 0;
+                      visibility: hidden;
+              }
+              
+              .clean-block {
+                        border-top: 2px solid orange!important;
+                        background-color: #fff;
+                        margin: auto;
+                        padding: 40px;
+                        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+                    }
+</style>
+<section class="clean-block clean-blog-list dark">
     <div>
-        <a href="@Url.RouteUrl(new {controller = "Catalog", action = "CategoryProducts"})?categoryId=@category.CategoryId" class="btn btn-primary btn-lg">
-            @category.CategoryName
-        </a>
+        <h3>
+            <label class="text-info">Категории:</label>
+        </h3>
     </div>
-}
+    <ul>
+        @foreach (var category in Model)
+        {
+            <li style="color: orange">
+                <a class="my-class" href="@Url.RouteUrl(new {controller = "Catalog", action = "CategoryProducts"})?categoryId=@category.CategoryId">
+                    @category.CategoryName
+                </a>
+            </li>
+        }
+    </ul>
+</section>
