--- a/Crunchers/Views/Admin/ManageAllProducts.cshtml
+++ b/Crunchers/Views/Admin/ManageAllProducts.cshtml
@@ -85,7 +85,7 @@
       }
       
       .text-info {
-        color: orange!important;
+        color: gray!important;
         font-weight: normal !important;
       }
       
