--- a/Crunchers/Views/FileUpload/Index.cshtml
+++ b/Crunchers/Views/FileUpload/Index.cshtml
@@ -1,32 +1,173 @@
 @model Crunchers.Models.FileUploadModel
+<style>
+      .clean-block.clean-form form {
+          border-top: 2px solid orange!important;
+          background-color: #fff;
+          max-width: 500px;
+          margin: auto;
+          padding: 40px;
+          box-shadow: 0 2px 10px rgba(0,0,0,.075);
+      }
 
+
+      input:focus {
+        outline: none;
+      }
+      
+      .fox {
+        font-size: 18px;
+        padding: 10px 10px 10px 5px;
+        display: block;
+        width: 300px;
+        border: none;
+        border-bottom: 1px solid orange !important;
+      }
+      
+      button, input {
+        overflow: visible;
+      }
+      
+      button, input, optgroup, select, textarea {
+        margin: 0;
+        font-family: inherit;
+        font-size: inherit;
+        line-height: inherit;
+      }
+    
+      
+
+      .clean-navbar.fixed-top + .page {
+        padding-top: 5rem;
+      }
+      
+      .clean-navbar.fixed-top + .page {
+        padding-top: 62px;
+      }
+      
+      
+      .clean-block.dark {
+              background-color: #ffffff;
+      }
+      
+      .container {
+        max-width: 1140px;
+      } 
+      
+      .container {
+        width: 100%;
+        padding-right: 15px;
+        padding-left: 15px;
+        margin-right: auto;
+        margin-left: auto;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 80px;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+        text-align: center;
+      }
+      .text-i {
+              color: orange!important;
+              font-weight: normal !important;
+            }
+      
+      .text-info {
+        color: darkgray!important;
+        font-weight: normal !important;
+      }
+      
+      .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
+        margin-bottom: .5rem;
+        font-weight: 500;
+        line-height: 1.2;
+      }
+      
+      h1, h2, h3, h4, h5, h6 {
+        margin-top: 0;
+        margin-bottom: .5rem;
+      }
+      
+      .clean-block .block-heading {
+        padding-top: 50px;
+        margin-bottom: 40px;
+      }
+      
+      .clean-block .block-content {
+        padding: 40px;
+      }
+      
+      .clean-block .block-content, .clean-block .content {
+        box-shadow: 0 2px 10px rgba(0,0,0,.075);
+        background-color: #fff;
+      }
+      
+      .clean-block.clean-faq .faq-item {
+        margin-bottom: 20px;
+      }
+      
+      .my-class {
+        color: orange !important;
+      }  
+      
+      .form-group {
+            border-top: 2px solid orange!important;
+                      background-color: #ffffff;
+                      max-width: 500px;
+                      margin: auto;
+                      padding: 40px;
+                      box-shadow: 0 2px 10px rgba(0,0,0,.075);
+            }  
+            
+            .clean-block {
+                                    border-top: 2px solid orange!important;
+                                    background-color: #fff;
+                                    margin: auto;
+                                    padding: 40px;
+                                    box-shadow: 0 2px 10px rgba(0,0,0,.075);
+                                }
+  
+</style>
 @using (Html.BeginForm("UploadFiles", "FileUpload", FormMethod.Post, new {enctype = "multipart/form-data"}))
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr/>
-        @Html.ValidationSummary(true, "", new {@class = "text-danger"})
-        <div class="form-group">
-            @Html.LabelFor(model => model.File, htmlAttributes: new {@class = "control-label col-md-2"})
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.File, new {htmlAttributes = new {@class = "form-control", @type = "file"}})
-                @Html.ValidationMessageFor(model => model.File, "", new {@class = "text-danger"})
-            </div>
+
+    <section class="clean-block clean-blog-list dark text-info">
+        @Html.ValidationSummary(true, "", new {@class = ""})
+        <div>
+            <h3>
+                @Html.LabelFor(model => model.File, htmlAttributes: new {@class = "text-info"})
+            </h3>
+            @Html.EditorFor(model => model.File, new {htmlAttributes = new {@class = "", @type = "file"}})
+            @Html.ValidationMessageFor(model => model.File, "", new {@class = ""})
+            <br/>
+            <input type="hidden" name="categoryId" value="@ViewBag.categoryId"/>
+            <input style="color: orange; background: white; border-color: orange" type="submit" value="Upload" class="btn btn-primary"/>
+            <br/>
+            @ViewBag.fileStatus
         </div>
-        <input type="hidden" name="categoryId" value="@ViewBag.categoryId"/>
-        <input type="submit" value="Upload" class="btn btn-primary"/>
-        @ViewBag.fileStatus
-    </div>
+    </section>
 }
 
 @if (ViewBag.link != null && ViewBag.categoryId != null)
 {
-    <form method="get" action="/Admin/ManageCategoryProducts">
-        <input type="hidden" name="categoryId" value="@ViewBag.categoryId"/>
-        <input type="hidden" name="imageLink" value="@ViewBag.link" }/>
-        <input type="submit" value="Return to fill product information"/>
-    </form>
+    <section class="clean-block clean-blog-list dark text-info">
+        <form method="get" action="/Admin/ManageCategoryProducts">
+            <input type="hidden" name="categoryId" value="@ViewBag.categoryId"/>
+            <input type="hidden" name="imageLink" value="@ViewBag.link" }/>
+            <input type="submit" value="Return to fill product information"/>
+        </form>
+    </section>
 }
 
 <script src="~/Scripts/jquery-1.10.2.min.js"></script>
