--- a/Crunchers/Views/Home/Index.cshtml
+++ b/Crunchers/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
 </style>
 
 <div class="row">
-    <section style="padding: 20px" class="clean-block clean-blog-list dark">
+    <section style="padding: 20px; border-top: 0px!important;" class="clean-block clean-blog-list dark">
         <div class="text-info">
             <p>
                 <a style="width: 100%" class="btn btn-default" href="@Url.RouteUrl(new {controller = "Catalog", action = "Index"})">Перейти в каталог</a>
