--- a/Crunchers/Views/Account/Login.cshtml
+++ b/Crunchers/Views/Account/Login.cshtml
@@ -30,6 +30,9 @@
   .btn-primary:not(:disabled):not(.disabled):active:focus {
     box-shadow: 0 0 0 .2rem orange !important;
   }
+  .my-class {
+          color: orange !important;
+        } 
 </style>
 
 <main class="page login-page">
@@ -72,7 +75,7 @@
                     </div>
                 </div>
                 <p>
-                    @Html.ActionLink("Регистрация нового пользователя", "Register")
+                    @Html.ActionLink("Регистрация нового пользователя", "Register",new{},new{@class="my-class"})
                 </p>
             }
 
