--- a/Crunchers/Views/Account/Register.cshtml
+++ b/Crunchers/Views/Account/Register.cshtml
@@ -2,11 +2,14 @@
 @{
     ViewBag.Title = "Регистрация";
 }
-@*<style>
+<style>
   input:invalid {
     border-color: rgba(255, 3, 0, 0.27); /* Красный цвет фона */
   }
-  .text-info{
+  .clean-block {
+    background-color: rgba(0, 0, 0, 0);
+  }
+  .text-info {
     color: orange !important;
   }
   .clean-block.clean-form form {
@@ -15,17 +18,17 @@
     max-width: 500px;
     margin: auto;
     padding: 40px;
-    box-shadow: 0 2px 10px rgba(0,0,0,.075);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, .075);
   }
-  .btn-primary{
+  .btn-primary {
     border-color: orange !important;
     background-color: white !important;
     color: orange !important;
   }
-  .btn-primary:not(:disabled):not(.disabled):active:focus{
+  .btn-primary:not(:disabled):not(.disabled):active:focus {
     box-shadow: 0 0 0 .2rem orange !important;
   }
-</style>*@
+</style>
 
 <main class="page registration-page">
     <section class="clean-block clean-form dark">
