--- a/Crunchers/Views/Admin/ManageProduct.cshtml
+++ b/Crunchers/Views/Admin/ManageProduct.cshtml
@@ -176,116 +176,88 @@
   
 </style>
 
-<h1>@Model.Products.FirstOrDefault().ProductName</h1>
 <form id="productInfo">
-    @{
-        <form>
-            <input id="productImageInput" placeholder="Вставьте ссылку на изображение" maxlength="255" value="@Model.Products.FirstOrDefault().ImageLink"/>
-            <input id="productNameInput" placeholder="Введите название товара" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" maxlength="100"  required/>
-            <input id="productPriceInput" placeholder="Введите цену товара" type="number" max="99999999" required value="@Model.Products.FirstOrDefault().ProductPrice"/>
-        </form>
-        <hr/>
-        var i = 0;
-        var characteristics = Model.Characteristics.ToList();
-        <form id='newCharacteristics'>
-            @if (characteristics.Count != 0)
-            {
-                foreach (var productChar in Model.Products)
-                {
-                    <text>@characteristics[i].CharacteristicName</text>
-                    if (characteristics[i].CharacteristicType == "Строковое значение")
-                    {
-                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+" maxlength="100" placeholder="Введите строковое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
-                    }
-                    else
-                    {
-                        <input id="Name=@characteristics[i].CharacteristicId" type="number" max="99999999"  min="0" required placeholder="Введите числовое значение для характеристики" value="@productChar.ValueToCharName.Item2"/>
-                        if (!string.IsNullOrEmpty(characteristics[i].Unit))
-                        {
-                            <text>(в @(characteristics[i].Unit))</text>
-                        }
-                        <text>(0 в случае отсутствия)</text>
-                    }
-                    i++;
-                    <br/>
-                }
-                for (var j = i + 1; j < characteristics.Count; j++)
-                {
-                    <text>@characteristics[i].CharacteristicName</text>
-                    if (characteristics[i].CharacteristicType == "Строковое значение")
-                    {
-                        <input id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+" maxlength="100"  placeholder="Введите строковое значение для характеристики"/>
-                    }
-                    else
-                    {
-                        <input id="Name=@characteristics[i].CharacteristicId" type="number" max="99999999" min="0" required placeholder="Введите числовое значение для характеристики"/>
-                        if (!string.IsNullOrEmpty(characteristics[i].Unit))
-                        {
-                            <text>(в @(characteristics[i].Unit))</text>
-                        }
-                        <text>(0 в случае отсутствия)</text>
-                    }
-                }
-            }
-            else
-            {
-                <text>Добавьте какие-либо характериситики.</text>
-            }
-
-        </form>
-        <a onclick="ChangeProduct()">Изменить товар</a>
-    }
-</form>
+    
 @{
     var productGroup = Model.Products.GroupBy(x => x.ProductId);
-    <section class="clean-block clean-blog-list dark">
+    <section class= "clean-block clean-blog-list dark">
         <div class="container">
             <div class="block-heading">
-                <h1 class="text-i">Управление категориями товаров</h1>
+                <h1 class="text-i">@Model.Products.FirstOrDefault().ProductName</h1>
             </div>
             <div class="form-group">
                 <form>
                     <h4>
-                        <p><label style="font-weight: inherit !important;" class="text-info" for id="productImageInput">Ссылка на изображение:</label>
-                            <input id="productImageInput" class="fox" maxlength="255" value="@ViewBag.imageLink"/>
+                        <p><label style="font-weight: inherit !important;" class="text-info" for="productImageInput">Ссылка на изображение:</label>
+                            <input class="fox" id="productImageInput" maxlength="255" value="@Model.Products.FirstOrDefault().ImageLink"/>
                         </p>
-                        <form method="get" action="/FileUpload/Index">
-                            <input type="hidden" name="categoryId" value="@ViewBag.categoryId" />
-                            <input type="submit" value="Загрузить изображение"/>
-                        </form>
                     </h4>
                     <h4>
-                        <p><label style="font-weight: inherit !important;" class="text-info" for id="productNameInput">Название товара:</label>
-                            <input id="productNameInput" class="fox" maxlength="100" required/>
+                        <p><label style="font-weight: inherit !important;" class="text-info" for="productNameInput">Название товара:</label>
+                            <input id="productNameInput" class="fox" value="@Model.Products.FirstOrDefault().ProductName" minlength="3" maxlength="100"  required/>
                         </p></h4>
                     <h4>
-                        <p><label style="font-weight: inherit !important;" class="text-info" for id="productPriceInput">Цена:</label>
-                            <input id="productPriceInput" class="fox" type="number" min="0" max="99999999" required>
+                        <p><label style="font-weight: inherit !important;" class="text-info" for="productPriceInput">Цена:</label>
+                           <input id="productPriceInput" class="fox" type="number" max="99999999" required value="@Model.Products.FirstOrDefault().ProductPrice"required/>
                         </p></h4>
                 </form>
                 <form id="newCharacteristics">
-                    @foreach (var characteristic in Model.Characteristics)
-                    {
-                        <h4><label style="font-weight: inherit !important;" class="text-info">@characteristic.CharacteristicName:</label>
-                            @{if (characteristic.CharacteristicType == "Строковое значение")
-                              {
-                                  <input class="fox" id="Name=@characteristic.CharacteristicId" pattern="[^_]+" maxlength="100"/>
-                                  <h6>(без символа "_")</h6>
-                              }
-                              else
-                              {
-                                  <input id="Name=@characteristic.CharacteristicId" type="number" max="99999999" min="0" required/>
-                                  if (characteristic.Unit != null || characteristic.Unit != "")
-                                  {
-                                      <text>(в @(characteristic.Unit))(0 в случае отсутствия)</text>
-                                  }
-                              }
-                            }</h4>
-                        <br/>
-                    }
-                </form>
-                <h4><a class="my-class" onclick=" AddProduct()">Добавить продукт</a></h4>
+                   @{var i = 0;
+                           var characteristics = Model.Characteristics.ToList();
+                           <form id='newCharacteristics'>
+                               
+                                   @{if (characteristics.Count != 0)
+                                   {
+                                       foreach (var productChar in Model.Products)
+                                       {
+                                           <h4><label style="font-weight: inherit !important;" class="text-info">@characteristics[i].CharacteristicName</label></h4>
+                                           if (characteristics[i].CharacteristicType == "Строковое значение")
+                                           {
+                                               <input class="fox" id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+" maxlength="100"  value="@productChar.ValueToCharName.Item2"/>
+                                           }
+                                           else
+                                           {
+                                               <input class="fox" id="Name=@characteristics[i].CharacteristicId" type="number" max="99999999" min="0" required  value="@productChar.ValueToCharName.Item2"/>
+                                               if (!string.IsNullOrEmpty(characteristics[i].Unit))
+                                               {
+                                                   <h4><label style="font-weight: inherit !important;" class="text-info">(в @(characteristics[i].Unit))</label></h4>
+                                               }
+                                               <h4><label style="font-weight: inherit !important;" class="text-info">(0 в случае отсутствия)</label></h4>
+                                           }
+                                           i++;
+                                           <br/>
+                                       }
+                                       for (var j = i + 1; j < characteristics.Count; j++)
+                                       {
+                                           <h4><label style="font-weight: inherit !important;" class="text-info">@characteristics[i].CharacteristicName</label></h4>
+                                           if (characteristics[i].CharacteristicType == "Строковое значение")
+                                           {
+                                               <input class="fox" id="Name=@characteristics[i].CharacteristicId" pattern="[^_]+" maxlength="100"/>
+                                           }
+                                           else
+                                           {
+                                               <input class="fox" id="Name=@characteristics[i].CharacteristicId" type="number" max="99999999" min="0" required />
+                                               if (!string.IsNullOrEmpty(characteristics[i].Unit))
+                                               {
+                                                   <h4><label style="font-weight: inherit !important;" class="text-info">(в @(characteristics[i].Unit))</label></h4>
+                                               }
+                                               <h4><label style="font-weight: inherit !important;" class="text-info">(0 в случае отсутствия)</label></h4>
+                                           }
+                                       }
+                                   }
+                                   else
+                                   {
+                                       <h4><label style="font-weight: inherit !important;" class="text-info">Добавьте какие-либо характериситики.</label></h4>
+                                   }
+                                   }
+                                   
+                   
+                           </form>
+                       <h4><a class="my-class" onclick="ChangeProduct()">Изменить товар</a></h4>
+                       }</form>
             </div>
         </div>
     </section>
 }
+</form>
+
